test/visibility/import/enablesUnqualified/multipleUnqualified/allButOne-error1.good
allButOne-error1.chpl:12: In function 'main':
allButOne-error1.chpl:13: error: 'd' undeclared (first use this function)
